# sqlite-native-libraries

./: README.md
sqlite3-native-library/: build.gradle.kts
sqlite3-native-library/cpp/: CMakeLists.txt  libsimple.patch
sqlite3-native-library/cpp/src/: extension_load.c
sqlite3-native-library/src/main/: AndroidManifest.xml
